# Warung-Madura

./: .gitignore  CMakeLists.txt  Database.cpp  Database.h  Kasir.cpp  Kasir.h  Main.cpp  README.md  Stock.cpp  Stock.h  database.json
Database/: database.json  transaksi.json
header/: ApiServer.h  Database.h  ExpiredHelper.h  Kasir.h  Keuangan.h  PathHelper.h  Stock.h  TUI.h  TUIComponents.h  TUIHelpers.h  TUIViews.h
scr/: ApiServer.cpp  Database.cpp  Kasir.cpp  Keuangan.cpp  Main.cpp  Stock.cpp  WebMain.cpp
src/: Database.cpp  Kasir.cpp  Main.cpp  TUI.cpp  TUIComponents.cpp  TUIHelpers.cpp  TUIViews.cpp
web/: index.html  kasir.html  keuangan.html  stock.html
web/css/: style.css
web/js/: api.js
